API doc, DB, rest client implemented
